tui/src/status/snapshots/agere_tui__status__tests__status_snapshot_includes_reasoning_details.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────╮
│  Open Agere (v0.3.16)                                             │
│                                                                   │
│  Model:            gpt-5.4 (reasoning high, summaries detailed)   │
│  Directory: [[workspace]]                                         │
│  Permissions:      Default                                        │
│  Agents.md:        <none>                                         │
│                                                                   │
│  Token usage:      1.9K total  (1K input + 900 output)            │
│  Context window:   100% left (2.25K used / 272K)                  │
│  5h limit:         [██████░░░░░░░░░░░░░░] 28% left (resets 03:14) │
│  Weekly limit:     [███████████░░░░░░░░░] 55% left (resets 03:24) │
╰───────────────────────────────────────────────────────────────────╯
