tui/src/status/snapshots/agere_tui__status__tests__status_snapshot_shows_refreshing_limits_notice.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────────────────╮
│  Open Agere (v0.3.16)                                                       │
│                                                                             │
│  Model:            gpt-5.4 (reasoning none, summaries auto)                 │
│  Directory: [[workspace]]                                                   │
│  Permissions:      Custom (workspace-write with network access, on-request) │
│  Agents.md:        <none>                                                   │
│                                                                             │
│  Token usage:      750 total  (500 input + 250 output)                      │
│  Context window:   100% left (750 used / 272K)                              │
│  5h limit:         [███████████░░░░░░░░░] 55% left (resets 08:24)           │
│  Weekly limit:     [██████████████░░░░░░] 70% left (resets 08:54)           │
╰─────────────────────────────────────────────────────────────────────────────╯
