tui/src/status/snapshots/agere_tui__status__tests__status_snapshot_uses_default_reasoning_when_config_empty.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────────────────╮
│  Open Agere (v0.3.16)                                                       │
│                                                                             │
│  Model:            gpt-5.4 (reasoning medium, summaries auto)               │
│  Directory: [[workspace]]                                                   │
│  Permissions:      Custom (workspace-write with network access, on-request) │
│  Agents.md:        <none>                                                   │
│                                                                             │
│  Token usage:      750 total  (500 input + 250 output)                      │
│  Context window:   100% left (750 used / 272K)                              │
│  Limits:           data not available yet                                   │
╰─────────────────────────────────────────────────────────────────────────────╯
